syntax = "proto3";

package order;

option go_package = "github.com/skycodes912/grpc-order-backend/proto";

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse);
    rpc GetOrder (OrderID) returns (OrderResponse);
    rpc UpdateOrder (OrderRequest) returns (OrderResponse);
    rpc DeleteOrder (OrderID) returns (OrderResponse);
}


message OrderRequest {
    string id = 1;
    string item = 2;
    int32 quantity = 3;
    double price = 4;
}

message OrderResponse {
    string id = 1;
    string item = 2;
    int32 quantity = 3;
    double price = 4;
    string status = 5;
}

message OrderID {
    string id = 1;
}